# MeshTools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
MeshTools/: GridTools.py  RawMesh.py  __init__.py  utils.py  vtkwriters.py
MeshTools/io/: dummy_petrel_grids.py  face_id.py  kershaw.py  medit.py  medit2fvca.py  petrel.py
MeshTools/utils/: edge.py
attic/: test-lamentin.py
conda/: README.md  meshtools-latest.yml  meshtools.yml
doc/: petrel_conversion_in_french.md
docker/: README.md  generate_environments.bash
docker/doc/: Dockerfile
docker/main/: Dockerfile-debian-stable
docker/run/: Dockerfile
docker/store_wheel/: Dockerfile
docs/: available_wheels.rst  conf.py  generate_doc.bash  generate_landing_page.py  generate_wheels_page.py  index.rst  introduction.rst
docs/examples/: examples.rst  hybrid_mesh.py  hybrid_mesh.rst
docs/wip/: petrel_conversion_in_french.md
maintenance/: get_pip_install.py
sdk/: install_wheel.bash  run_tests.bash
src/: CMakeLists.txt
src/URG/: Boundary_hull.h  CMakeLists.txt  Existence_domain.h  Indexed_elements.h  Indexed_plane.h  On_side.h  Plane_side.h  conveniencies.h  urg.cpp
src/URG/attic/: Functor_handle.h  Surface_approximation.h  Surface_vertex_index.h  urg.cpp
src/cgal/: ArrayWrapper.h  BufferInfo.h  C3t3Wrapper-module.cpp  C3t3Wrapper-module.h  C3t3Wrapper.cpp  C3t3Wrapper.h  CGALWrappers.cpp  CMakeLists.txt  Constraint.h  Curve.h  Curves_junction.h  DTM.h  DTMWrapper-module.h  DTMWrapper.cpp  DistanceTrees.h  DummyDomain.h  EpickWrapper-module.cpp  EpickWrapper-module.h  Epick_types.h  On_curve_constraint.h  On_junction_constraint.h  Polygon2Wrapper-module.cpp  Polygon2Wrapper-module.h  PyBuffer_wrappers.cpp  PyBuffer_wrappers.h  Shared_node.h  TSurfBlob.h  TSurfBlobPoint.h  collect_consrained_edges_as_curves.h  corefinement.cpp  implicit_functions.cpp  implicit_functions.h  mesh-pyutils.h  mesh_implicit_domains.cpp  surface-utils.h
src/cgal/attic/: Constrained_point.h  Curve_node.h  Curve_on_surface.h  Curves_link.h  Header1.h  On_corner_constraint.h  Point_on_surface.h  UIdFactory.h
src/core/: Base_chunks_chain.h  CMakeLists.txt  Chunk.h  Chunks_chain.cpp  Chunks_chain.h  Chunks_chain_IO.h  Composite_chunk.h  Tuple_utils.h  Variable_size_array_chunk.h  Variant_utils.h  common.h  meshtools-helpers.h  meshtools-module.cpp  meshtools-wrapper.cpp  meshtools-wrapper.h  meshtools.h
src/experimental/: CMakeLists.txt  split-manager.cpp
src/petrel/: CMakeLists.txt  GenericConnectedComponents.h  petrel-mesh.cpp  petrel-mesh.h
tests/: CMakeLists.txt
tests/cgal/: CMakeLists.txt  test-DTM.cpp  test-importC3T3.cpp  test-petrel.cpp
tests/ci/: test_composite.py  test_dummy_petrel_grids.py  test_hexmesh.py  test_hybridmesh.py  test_non_conformable_mesh.py  test_non_conformal_meshes.py  test_polygons.py  test_polyhedron_diamond_and_tet.py  test_wedge.py
tests/experimental/BP/: mesh_bassin_paris.py
tests/experimental/BP/bassin_paris/: misc.py
tests/experimental/petrel/: petrel.py  petrel2vtu.py  read_cgal_cdt.py  test_connected_components.py
tests/python/: extract_topography.py  test-c3t3.py  test-communicate.py  test-consumer.py  test-corefinement.py  test-distribution.py  test-distribution2.py  test-edge.py  test-faces.py  test-grid.py  test-gridtools.py  test-hewaedron.py  test-hexaedron.py  test-hexmesh.py  test-identification.py  test-lamentin.py  test-mesh-Xing17.py  test-meshtools.py  test-meshtools2.py  test-meshtools3.py  test-mpi-distribution.py  test-pvtu.py  test-pyramids.py  test-raw_mesh.py  test-split.py  test-split_grid_edges.py  test-urg.py  test-vti.py  test_c3t3.py  test_distribution.py  test_distribution2.py  test_epick.py  test_export_complex_boundaries.py  test_faces.py  test_grid.py  test_gridtools.py  test_hexaedron.py  test_hexmesh.py  test_identification.py  test_mesh-Xing17.py  (+11 more)
tests/src/: consumer-module.cpp  test-meshtools.cpp  test-optional.cpp
thirdparties/: CMakeLists.txt
thirdparties/mapbox/include/mapbox/: optional.hpp  recursive_wrapper.hpp  variant.hpp  variant_io.hpp
