# Weirdly we have to repeat the package name here
# otherwise setup based installations (not pip) have UNKNOWN as package name
# this seems to be a bug...
[metadata]
name = MeshTools
author = BRGM
author_email = compass@brgm.fr
description = A python library for managing mesh information and pre/post-process ComPASS simulations.
long_description = file: README.md
license = GPL v.3

[options]
install_requires =
    numpy
    verstr
    vtkwriters
# packages must be listed in setup.py to be intercepted by scikit-build
# cf. https://scikit-build.readthedocs.io/en/latest/usage.html#setuptools-options
